[package]
name = "rusty_journal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95" # <--- Add `anyhow` to our project dependencies.
home = "0.5.11" # <--- Add `home` to our project dependencies.
serde_json = "1.0.135"  # Add serde_json.
structopt = "0.3.26"

[dependencies.chrono]
features = ["serde"]    # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4.39"

[dependencies.serde]    # Add serde in its own section.
features = ["derive"]
version = "1.0.217"